# jotpad

./: README.md  pyproject.toml  release.sh  widgets.qss
data/: com.jotpad.Jotpad.desktop
data/themes/: dark.conf  light.conf  solarized_dark.conf  solarized_light.conf
man/: jotpad.1
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  copyright  rules
packaging/rpm/: jotpad.spec
src/jotpad/: __init__.py  app.py  config.py  highlighter.py  themes.py  widgets.py
src/jotpad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
